Checkpoint 4 - cg1ead292a

--- a/backend_api/.env.example
+++ b/backend_api/.env.example
@@ -1,12 +1,24 @@
-# Backend API environment example (prod profile)
+# Example environment variables for backend_api (prod/staging)
 SPRING_PROFILES_ACTIVE=prod
 
-# Database configuration for Postgres (prod)
-SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5432/price_db
+# Database
+SPRING_DATASOURCE_URL=jdbc:postgresql://host:5432/db
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 
-# Optional: override Hibernate/Flyway defaults
-# SPRING_JPA_HIBERNATE_DDL_AUTO=validate
-# SPRING_JPA_SHOW_SQL=false
-# SPRING_FLYWAY_ENABLED=true
+# Security / JWT
+JWT_SECRET=please_generate_a_secure_random_base64_secret
+JWT_EXP_MIN=60
+FRONTEND_ORIGIN=http://localhost:3000
+
+# Scheduler
+PRICES_CRON=0 0 * * * *
+
+# Mail placeholders
+MAIL_HOST=
+MAIL_API_KEY=
+MAIL_FROM=no-reply@example.com
+
+# Scraper URLs (optional overrides)
+SCRAPER_RETAILER_A_URL=https://reta.example.com
+SCRAPER_RETAILER_B_URL=https://retb.example.com
