--- a/backend_api/src/main/resources/application.properties
+++ b/backend_api/src/main/resources/application.properties
@@ -14,3 +14,20 @@ management.endpoints.web.exposure.include=health,info,metrics
 
 # Respect X-Forwarded-* / Forwarded headers so redirects preserve external scheme/host/port
 server.forward-headers-strategy=framework
+
+# App security and CORS (values sourced from env)
+app.security.jwt-secret=${JWT_SECRET:change_me_please_for_dev_only_change_me_please_for_dev_only}
+app.security.jwt-exp-min=${JWT_EXP_MIN:60}
+app.security.frontend-origin=${FRONTEND_ORIGIN:*}
+
+# Scheduler cron
+app.scheduler.prices-cron=${PRICES_CRON:0 0 * * * *}
+
+# Mail placeholders
+app.mail.host=${MAIL_HOST:}
+app.mail.api-key=${MAIL_API_KEY:}
+app.mail.from=${MAIL_FROM:no-reply@example.com}
+
+# Scraper configuration placeholders
+app.scraper.retailerA.base-url=${SCRAPER_RETAILER_A_URL:https://reta.example.com}
+app.scraper.retailerB.base-url=${SCRAPER_RETAILER_B_URL:https://retb.example.com}
