--- a/backend_api/src/main/resources/application-dev.properties
+++ b/backend_api/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 # H2 Database Configuration (Dev)
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+# DB_CLOSE_DELAY=-1 keeps the in-memory DB alive until JVM exits, reducing "database is already closed" warnings.
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -9,6 +10,10 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# Ensure proper shutdown ordering; optional but can reduce noise
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.maximum-pool-size=5
 
 # Disable Flyway in dev unless explicitly enabled
 spring.flyway.enabled=false
