--- a/backend_api/src/main/resources/application.properties
+++ b/backend_api/src/main/resources/application.properties
@@ -31,3 +31,8 @@ app.mail.from=${MAIL_FROM:no-reply@example.com}
 # Scraper configuration placeholders
 app.scraper.retailerA.base-url=${SCRAPER_RETAILER_A_URL:https://reta.example.com}
 app.scraper.retailerB.base-url=${SCRAPER_RETAILER_B_URL:https://retb.example.com}
+
+# JPA/Validation/Hibernate general hints
+spring.jpa.open-in-view=false
+# Prefer transaction-bound fetch behavior (Hibernate 6 default is fine; explicit for clarity)
+# spring.jpa.properties.hibernate.enable_lazy_load_no_trans=false
