--- a/backend_api/src/main/resources/application-dev.properties
+++ b/backend_api/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # H2 Database Configuration (Dev)
 # DB_CLOSE_DELAY=-1 keeps the in-memory DB alive until JVM exits, reducing "database is already closed" warnings.
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
