Checkpoint 7 - cg1ead292a

--- a/backend_api/.env.example
+++ b/backend_api/.env.example
@@ -1,24 +1,31 @@
-# Example environment variables for backend_api (prod/staging)
-SPRING_PROFILES_ACTIVE=prod
+# Backend API - .env.example
+# Copy this file to .env and adjust values as needed.
 
-# Database
-SPRING_DATASOURCE_URL=jdbc:postgresql://host:5432/db
-SPRING_DATASOURCE_USERNAME=postgres
-SPRING_DATASOURCE_PASSWORD=postgres
+# Spring profile (dev uses H2 in-memory DB; prod uses PostgreSQL via SPRING_DATASOURCE_* vars)
+SPRING_PROFILES_ACTIVE=dev
 
-# Security / JWT
-JWT_SECRET=please_generate_a_secure_random_base64_secret
-JWT_EXP_MIN=60
+# CORS: set to your frontend origin (React dev server defaults to http://localhost:3000)
 FRONTEND_ORIGIN=http://localhost:3000
 
-# Scheduler
+# JWT secret (base64 or raw string; service will base64-encode raw strings)
+# Use at least 32 characters for HMAC key strength
+JWT_SECRET=change_me_for_dev_only_change_me_for_dev_only
+# Access token expiry in minutes
+JWT_EXP_MIN=60
+
+# Scheduler cron for price checks (Spring cron format: sec min hour day month day-of-week)
 PRICES_CRON=0 0 * * * *
 
-# Mail placeholders
+# Scraper configuration placeholders
+SCRAPER_RETAILER_A_URL=https://reta.example.com
+SCRAPER_RETAILER_B_URL=https://retb.example.com
+
+# Optional: Email provider placeholders for future integration
 MAIL_HOST=
 MAIL_API_KEY=
 MAIL_FROM=no-reply@example.com
 
-# Scraper URLs (optional overrides)
-SCRAPER_RETAILER_A_URL=https://reta.example.com
-SCRAPER_RETAILER_B_URL=https://retb.example.com
+# Production database settings (only used when SPRING_PROFILES_ACTIVE=prod)
+# SPRING_DATASOURCE_URL=jdbc:postgresql://host:5432/db
+# SPRING_DATASOURCE_USERNAME=postgres
+# SPRING_DATASOURCE_PASSWORD=postgres
